--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -127,11 +127,18 @@
 @layer base {
   * {
     border-color: var(--border);
+    box-sizing: border-box;
+    /* Disable text selection */
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
   }
   
   body {
     background-color: var(--background);
     color: var(--foreground);
+    padding-top: env(safe-area-inset-top, 0);
   }
 
   html,
@@ -140,16 +147,28 @@
     width: 100%;
     margin: 0;
     padding: 0;
+    overflow: hidden;
+    /* Disable scrollbar on html/body */
   }
 
   #root {
     min-height: 100%;
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
+    overflow-y: hidden;
+    /* Enable scrolling on the root container */
+    overflow-x: hidden;
   }
-
-  * {
-    box-sizing: border-box;
+  
+  /* Allow text selection in input fields and text areas */
+  input,
+  textarea,
+  [contenteditable="true"] {
+    user-select: text;
+    -webkit-user-select: text;
+    -moz-user-select: text;
+    -ms-user-select: text;
   }
 }
